Fix bottom spacing for App-features

--- a/client-app/src/app/App.css
+++ b/client-app/src/app/App.css
@@ -21,7 +21,7 @@
     position: relative;
     flex-grow: 1;
     overflow-y: auto;
-    padding: 0 1rem;
+    padding: 0 1rem 1rem;
 }
 
 .App-features::-webkit-scrollbar {
